syntax = "proto3";

package anonymous_vote;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AnonymousVoteContract {
  rpc RegisterCommitment (RegisterCommitmentInput) returns (google.protobuf.Empty) {}
}

message RegisterCommitmentInput {
  aelf.Hash voting_item_id = 1;
  aelf.Hash commitment = 2;
  int64 vote_amount = 3;
}

message Commit {
  option (aelf.is_event) = true;

  aelf.Hash proposal_id = 1 [(aelf.is_indexed) = true];
  aelf.Hash commitment = 2;
  uint32 leaf_index = 3;
  google.protobuf.Timestamp timestamp = 4;
}
